<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxCoches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:text="@string/coches" />

        <CheckBox
            android:id="@+id/checkBoxMotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:text="@string/motos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroupCoches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonCocheIzq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagen_coche_izquierda" />

            <RadioButton
                android:id="@+id/radioButtonCocheDerc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagen_coche_derecha" />

            <RadioButton
                android:id="@+id/radioButtonCocheDoble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagen_coche_doble" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupMotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonMotoIzq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagen_moto_izquierda" />

            <RadioButton
                android:id="@+id/radioButtonMotoDerc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagen_moto_derecha" />

            <RadioButton
                android:id="@+id/radioButtonMotoDoble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagen_moto_doble" />
        </RadioGroup>

    </LinearLayout>

    <ListView
        android:id="@+id/listViewVehiculos"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_weight="2" />
</LinearLayout>